# jupyterlab-snips

./: .copier-answers.yml  .gitignore  .prettierignore  .yarnrc.yml  LICENSE  README.md  RELEASE.md  conftest.py  install.json  package-lock.json  package.json  project-structure  pyproject.toml  setup.py  tsconfig.json
.github/workflows/: build.yml  check-release.yml
binder/: environment.yml  postBuild
jupyter-config/server-config/: jupyterlab_snips.json
jupyterlab_snippets/: __init__.py  _version.py
jupyterlab_snips/: __init__.py  handlers.py
jupyterlab_snips/tests/: __init__.py  test_handlers.py
schema/: plugin.json
src/: handler.ts  index.ts
src/__tests__/: jupyterlab_snips.spec.ts
src/components/: EditSnippetPanel.tsx  MultiSelect.tsx  SaveSnippetDialog.tsx  SnippetList.tsx  SnippetPanel.tsx  Tooltip.tsx  TooltipModal.tsx  index.ts
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/models/: types.ts
src/services/: completerService.ts  snippetService.ts  storageService.ts
style/: index.css
ui-tests/: package.json
ui-tests/tests/: jupyterlab_snips.spec.ts
