[build-system]
requires = [
    "hatchling>=1.8.0",
    "hatch-nodejs-version>=0.3.0",
    "hatch-jupyter-builder>=0.5.0",
    "jupyterlab>=4.0.0,<5.0.0"
]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-snips"
version = "0.1.0"
description = "JupyterLab 代码片段插件"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.7"
authors = [
    { name = "catwang01", email = "edwardelricwzx@gmail.com" },
]
dependencies = [
    "jupyterlab>=4.0.0,<5.0.0",
]

[tool.hatch.build]
artifacts = ["jupyterlab_snips/labextension"]

[tool.hatch.build.targets.wheel.shared-data]
"jupyterlab_snips/labextension" = "share/jupyter/labextensions/jupyterlab_snips"
"install.json" = "share/jupyter/labextensions/jupyterlab_snips/install.json"

[tool.jupyter-builder]
dependencies = ["hatch-jupyter-builder>=0.5.0"]
build-function = "hatch_jupyter_builder.npm_builder"
build-kwargs = { build_cmd = "build:prod" }
editable-build-kwargs = { build_cmd = "build" }
ensured-targets = [
    "jupyterlab_snips/labextension/package.json",
]
skip-if-exists = ["jupyterlab_snips/labextension/static/style.js"]

[tool.hatch.build.hooks.version]
path = "jupyterlab_snips/_version.py"

[tool.hatch.build.targets.sdist]
exclude = [".github"] 